<resources>
    <string name="app_name">testMgmtAndroid</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string-array name="listtt">
        <item>Exam Name</item>
        <item>Exam Date</item>
    </string-array>

    <string-array name="array_name">
        <item></item>
        <item>Array Item One</item>
        <item>Array Item Two</item>
        <item>Array Item Thirtthousand</item>
    </string-array>

    <string name="finishmsh">Are you sure want to submit the exam. Please make sure after clicking Finish button, you cannot make any changes. Please click on Confirm for exam submission.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inststring">1. The Timer has been set,and the countdown will display the time remaining for you.When the timer runs out, the exam ends by default.After that,No action is required.</string>
    <string name="secondIntrustion">2.You can flag any of the question you want.</string>
    <string name="thirdinst">3. you can clear answers if you do not wish to submit any of the responses provided.</string>
    <string name="fourthintstruction">4. If you drop this exam,it will not be submitted, and result will not br generated.</string>
    <string name="fifthinstrustion">5.you can finish this exam even if any questions are un-attempted.</string>
    <string name="sixthinstrution">6.Once the exam is finished,it cannot be resumed.</string>
    <string name="checkboxinstruction">I have read and understood the instruction .I agree to accept the result generated by this system.</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="user_profile" >Profile</string>
    <string name="my_doctor" >Photos</string>
    <string name="hint_name">Name</string>
    <string name="update_student_profile">/api/students/updateProfile</string>
    <string name="select_photo_type_msg">Select Photo Type</string>
    <string name="exception_msg">Something went wrong. Please restart the app and try again.</string>
    <string name="select_document_type_msg">Select Document Type</string>
    <string name="no_document_msg">No document(s) available.</string>
    <string name="no_photo_msg">No photo(s) available.</string>
</resources>