<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ExamInstructionFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        android:layout_margin="5dp"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="Exam Instruction"
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="40dp"
                android:text="Please read carefully."
                android:textSize="17sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"

                android:layout_marginTop="65dp"
                android:textStyle="bold"
                android:text="@string/inststring"

                android:typeface="sans" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/secondIntrustion"

                android:textStyle="bold"

                android:typeface="sans" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/thirdinst"

                android:textStyle="bold"

                android:typeface="sans" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/fourthintstruction"

                android:textStyle="bold"

                android:typeface="sans" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/fifthinstrustion"

                android:textStyle="bold"

                android:typeface="sans" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:padding="8dp"
                android:text="@string/sixthinstrution"

                android:textStyle="bold"

                android:typeface="sans" />
            <CheckBox android:id="@+id/checkbox_cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:checked="false"
                android:text="@string/checkboxinstruction"
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Start Exam"
                    android:visibility="invisible"
                    android:id="@+id/start_exam_btn"
                   android:backgroundTint="@color/colorGreen"/>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:gravity="bottom">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_Navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:windowBackground"
                android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
                app:itemIconTint="@color/design_default_color_primary_dark"
                app:menu="@menu/bottom_menu" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>